UX Project Manager at Modus . Farfetch Careers - Senior UI/UX Product Designer. UX Internship - Codal - Career Page. UX/UI Designer - Codal - Career Page. Senior UX/UI Designer - Codal - Career Page. Job Application for User Experience (UX) Strategy & Design Lead at AKQA. UX Researcher (9382691) - PRO Unlimited @ Facebook - Career Page. UX Researcher (9257956) - PRO Unlimited @ Facebook - Career Page. UX Lab Technical Support (9259511) - PRO Unlimited @ Facebook - Career Page. UX Research Lab Technical Support (9362310) - PRO Unlimited @ Facebook - Career Page. Version 1 UX Consultant | SmartRecruiters. Virtuo - UX designer (H/F). Virtuo - UX designer. Sodern ArianeGroup INGENIEUR D'ETUDES MECANIQUES ET THERMIQUE / RESPONSABLE DE LOT DE TRAVAUX F/H | CDI | SmartRecruiters. Job @ Clark Germany (Frankfurt): Lead UX / Design ... | JOIN. Ubisoft Senior UX Designer - Rainbow Six Siege | SmartRecruiters. Intouch Group - VP, UX Director. Intouch Group - VP, UX Director. Sia Partners [nod-A] UX Designer - Sprint Designer H/F | SmartRecruiters. Job @ Westphalia DataLab  (Münster): UX Designer (... | JOIN. Praxis Engineering Careers - UI/UX Designer. UX/UI Designer. Brandwatch Careers - Product/UX Designer.       Senior UX Designer (m/f/d) with focus Usability Concept - designaffairs GmbH     .     UX Writer at MEKARI (PT. Mid Solusi Nusantara) . Sr. UX Designer - Revel Health - Career Page. iflix Careers - Junior UI/UX designer. Capgemini Japan Careers - Senior UX Consultant. Lecle Vietnam UI/UX Designer | SmartRecruiters. Daytwo - Ui/UX Designer. Job Application for Project Manager, UX Writing (Contract) at Sony .... eFront - UX Designer. Job @ colorfy (Berlin): UX/ UI Designer (f/m/*) | JOIN. UX Intern #0079 job at Watermark in Milwaukee, WI, powered by JobScore. Job @ GOWAGO (Zürich): UX Researcher/Designer | JOIN. Job @ Global Savings Group (Munich): UX Designer (... | JOIN. Shopify - UX Handbook Technical Writer. Lecle Vietnam UI/UX Designer | SmartRecruiters. Job Appli

--- a/ux.html
+++ b/ux.html
@@ -41,11 +41,17 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://modus.recruiterbox.com/jobs/fk03ft7'>
+    UX Project Manager at Modus
+</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/farfetch/job/odHM7fwx'>Farfetch Careers - Senior UI/UX Product Designer</a></h5> 
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://codal.applytojob.com/apply/ycpxZC/UX-Internship'>UX Internship - Codal - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://codal.applytojob.com/apply/ycpxZC/UX-Internship'>UX Internship - Codal - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -89,7 +95,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SodernArianeGroup/743999692324593-ingenieur-d-etudes-mecaniques-et-thermique-responsable-de-lot-de-travaux-f-h-cdi'>Sodern ArianeGroup INGENIEUR D'ETUDES MECANIQUES ET THERMIQUE / RESPONSABLE DE LOT DE TRAVAUX F/H | CDI | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SodernArianeGroup/743999692324593-ingenieur-d-etudes-mecaniques-et-thermique-responsable-de-lot-de-travaux-f-h-cdi'>Sodern ArianeGroup INGENIEUR D'ETUDES MECANIQUES ET THERMIQUE / RESPONSABLE DE LOT DE TRAVAUX F/H | CDI | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -101,7 +107,7 @@
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/intouchgroup/b6217e3c-417b-43f0-9ac0-7324aaf8bc9d'>Intouch Group - VP, UX Director</a></h5> 
+<h5><a href='https://jobs.lever.co/intouchgroup/b6217e3c-417b-43f0-9ac0-7324aaf8bc9d'>Intouch Group - VP, UX Director</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -117,7 +123,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/praxis-engineering/job/oBeDafwm'>Praxis Engineering Careers - UI/UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/praxis-engineering/job/oBeDafwm'>Praxis Engineering Careers - UI/UX Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -150,7 +156,7 @@ research, interaction design, data visualization, prototyping, and the productio
 <p><span class="badge badge-light">Melbourne</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/capgemini-japan/job/ohUCafwH'>Capgemini Japan Careers - Senior UX Consultant</a></h5> 
+<h5><a href='https://jobs.jobvite.com/capgemini-japan/job/ohUCafwH'>Capgemini Japan Careers - Senior UX Consultant</a></h5> 
 <p><span class="badge badge-light">Tokyo Tokyo</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -171,15 +177,15 @@ Provides project management expertise for highly complex creative projects,?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://colorfy.join.com/jobs/271094-ux-ui-designer-f-m'>Job @ colorfy (Berlin): UX/ UI Designer (f/m/*) | JOIN</a></h5> 
+<h5><a href='https://colorfy.join.com/jobs/271094-ux-ui-designer-f-m'>Job @ colorfy (Berlin): UX/ UI Designer (f/m/*) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/watermark/jobs/ux-intern-dUqsyMRWCr6BECaKld2Sj6'>UX Intern #0079 job at Watermark in Milwaukee, WI, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/watermark/jobs/ux-intern-dUqsyMRWCr6BECaKld2Sj6'>UX Intern #0079 job at Watermark in Milwaukee, WI, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://gowago.join.com/jobs/257214-ux-researcher-designer'>Job @ GOWAGO (Z?rich): UX Researcher/Designer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gowago.join.com/jobs/257214-ux-researcher-designer'>Job @ GOWAGO (Z?rich): UX Researcher/Designer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... GOWAGO AG has a job opening for UX Researcher/Designer in Z?rich (
 published: 16.07.2019). Apply now or check the other available jobs.</p>
@@ -196,7 +202,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Vietnam Vietnam</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dv01/jobs/4369704002'>Job Application for UX Engineer at dv01</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dv01/jobs/4369704002'>Job Application for UX Engineer at dv01</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -280,11 +286,11 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bcg/e153db3e-b15f-4d20-8a1e-f685e52c5bbf'>BCG Digital Ventures - Senior UX Designer - FinTech Venture Startup</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bcg/e153db3e-b15f-4d20-8a1e-f685e52c5bbf'>BCG Digital Ventures - Senior UX Designer - FinTech Venture Startup</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bcg/e20a4899-1f65-4c99-96b1-e1897a612d50'>BCG Digital Ventures - Senior UX/UI Designer - Stealth Automotive Marketplace</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bcg/e20a4899-1f65-4c99-96b1-e1897a612d50'>BCG Digital Ventures - Senior UX/UI Designer - Stealth Automotive Marketplace</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -300,7 +306,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Toronto, ON</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dvele/b55dae8e-c0e3-4981-9e05-1581c5ac4218'>Dvele - UI/UX Designer</a></h5> 
+<h5><a href='https://jobs.lever.co/dvele/b55dae8e-c0e3-4981-9e05-1581c5ac4218'>Dvele - UI/UX Designer</a></h5> 
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -310,7 +316,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://fiix-software.workable.com/j/206014BD85'>Fiix Software - Jobs: User Experience (UX) Designer - Apply online</a></h5> 
+<h5><a href='https://fiix-software.workable.com/j/206014BD85'>Fiix Software - Jobs: User Experience (UX) Designer - Apply online</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -326,7 +332,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://medici-living.join.com/jobs/266020-ux-ui-designer-m-f-d'>Job @ Medici Living Digital Services (Berlin): UX/... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medici-living.join.com/jobs/266020-ux-ui-designer-m-f-d'>Job @ Medici Living Digital Services (Berlin): UX/... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -338,7 +344,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999692216963-ux-ui-designer'>ShopUp UX/UI Designer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999692216963-ux-ui-designer'>ShopUp UX/UI Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -439,11 +445,11 @@ for candidates with solid technical foundations and a desire to continue learnin
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/adhocteam/jobs/4358212002'>Job Application for UX Designer (remote) at Ad Hoc</a></h5> 
+<h5><a href='https://boards.greenhouse.io/adhocteam/jobs/4358212002'>Job Application for UX Designer (remote) at Ad Hoc</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/drivy/2d1b9257-22b5-4919-8830-d0c88b4fda55'>Drivy - UX Writer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/drivy/2d1b9257-22b5-4919-8830-d0c88b4fda55'>Drivy - UX Writer</a></h5> 
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -458,10 +464,6 @@ VERTRIEBSSPEZIALIST (M/W) in N?rnberg (published: 28.09.2018). Apply now
 or check?...</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=quEaVfwX&k=Job&j=oCcAafwi&__jvst=Employee&__jvsd=sukUBhw5&__jvsc=Twitter&bid=nq6QPKwq&jvi=oCcAafwi,Job&jvk=Job'>TaskUs Careers - UX Designer</a></h5> 
-<p><span class="badge badge-light">Philippines</span></p>
-<p>Posted on:: 2019-07-22</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=quEaVfwX&k=Job&j=oCcAafwi&__jvst=Employee&__jvsd=sEMBNhwA&__jvsc=Twitter&bid=ntsPPKwO&jvi=oCcAafwi,Job&jvk=Job'>TaskUs Careers - UX Designer</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on:: 2019-07-22</p>
 <hr/>
